--- a/react18_ts_music/src/assets/css/reset.less
+++ b/react18_ts_music/src/assets/css/reset.less
@@ -1,25 +1,4 @@
-body,
-html,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-ul,
-ol,
-li,
-dl,
-dt,
-dd,
-header,
-menu,
-section,
-p,
-input,
-td,
-th,
-ins {
+body, html, h1, h2, h3, h4, h5, h6, ul, ol, li, dl, dt, dd, header, menu, section, p, input, td, th, ins {
   padding: 0;
   margin: 0;
 }
@@ -33,11 +12,11 @@ img {
   vertical-align: top;
 }
 
-ul,
-li {
+ul, li {
   list-style: none;
 }
 
 button {
   outline: none;
+  border: none;
 }
