--- a/react18_ts_music/src/assets/css/common.less
+++ b/react18_ts_music/src/assets/css/common.less
@@ -5,6 +5,12 @@ body, textarea, select, input, button {
   background-color: #f5f5f5;
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box; // 1
+}
+
 .wrap-v1 {
   width: 1100px;
   margin: 0 auto;
