--- a/react18_ts_music/src/assets/css/common.less
+++ b/react18_ts_music/src/assets/css/common.less
@@ -1,7 +1,7 @@
 body, textarea, select, input, button {
   font-size: 12px;
   color: #333;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Microsoft Yahei", Arial, Helvetica, sans-serif;
   background-color: #f5f5f5;
 }
 
